# tms_keycmd

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  log4rs.yml  tms_env_local  tms_env_test  tms_keycmd.sh
deployment/: README  build_package.sh  tms_keycmd_example_config.toml
packaging/: README  tms-keycmd.spec
packaging/rpmbuild/SOURCES/: README
src/: lib.rs  main.rs
test/: README  create_keypair.sh  get_key_testhostaccount1.json  get_pubkey.sh  get_version.sh
test_flow/: create_client.sh  create_client_req.json  create_client_resp.json  create_client_tapis_req.json  create_client_tapis_resp.json  create_delegations.sh  create_delegations_req.json  create_delegations_resp.json  create_keypair.sh  create_keypair_req.json  create_keypair_req_test1.json  create_keypair_req_test2.json  create_keypair_resp.json  create_user_mfa.sh  create_user_mfa_req.json  create_user_mfa_resp.json  create_userhosts.sh  create_userhosts_req.json  create_userhosts_resp.json  get_pubkey.sh  get_pubkey_req.json  get_version.sh
