[package]
name = "tms_keycmd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.83"
gethostname = "0.4.3"
local-ip-address = "0.6.1"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
ureq = { version = "2.9.7", features = ["json", "charset"] }
