[package]
name = "tms_keycmd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

build = "build.rs"

[build-dependencies]
# All features enabled
#vergen-gitcl = { version = "1.0.0", features = ["build", "cargo", "rustc", "si"] }
# Selected features
vergen-gitcl = { version = "1.0.5", features = ["build"] }

[dependencies]
anyhow = "1.0.83"
attohttpc = { version = "0.28.0", features = ["json"] }
figment = { version = "0.10.19", features = ["toml"] }
fs-mistrust = "0.7"
log = "0.4.21"
log4rs = "1.3.0"
path-absolutize = "3.1"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
shellexpand = "3.1"
